Fixed wrong width table cells
So, apparently, when you specify a width for the body element and the
computed with of your table would exceed this width it just decides to
collapse every column to the width of the contained text. This gives
funny results... And is hard to isolate.

--- a/css/table.css
+++ b/css/table.css
@@ -1,5 +1,4 @@
 body {
-  width: 600px;
 }
 
 table {
@@ -14,7 +13,7 @@ thead th, thead td {
   border-top: 2px solid black;
   border-bottom: 1px solid black;
   padding: .3em 0;
-  width: 9em;
+  width: 6em;
   background-color: white;
 }
 
@@ -28,7 +27,7 @@ tbody th {
 
 tbody td {
   border: 1px solid white;
-  width: 9em;
+  width: 6em;
 }
 
 td {
